# mppc

./: .gitignore  LICENSE  README.md  pyproject.toml
data/experiment/disturbances/: encoderData.csv  footData.csv  parkourData.csv  resultData.csv  stateData.csv  viconData.csv
data/experiment/dynamic_1/: encoderData.csv  footData.csv  parkourData.csv  resultData.csv  stateData.csv  viconData.csv
docs/info/: INSTALLATION.md
model/config/: robot_exp.toml  robot_sim.toml
model/gains/: gains.toml  gains_pb.toml
model/meshes/: Link_Hip_Pitch.STL  Link_Hip_Roll.STL  Link_Knee_Pitch.STL  area.STL  base_link.STL  leg_mounting.STL  link_endeffektor_roll.STL  link_passive_linear_2.STL  link_passive_linear_3.STL  link_passive_linear_4.STL  link_passive_linear_5.STL  link_passive_linear_vertical.STL  link_pitch.STL  link_yaw.STL
model/plant/: boomstick_hopper.json
model/urdf/: area_40cm.urdf  boomstick-hopper.urdf  box_10cm.urdf  box_20cm.urdf  box_30cm.urdf  box_vicon_1.urdf  box_vicon_2.urdf  contact.urdf  marker.urdf  monoped.urdf  monoped_sim.urdf  plane.urdf
software/experiment/: experiment_mppc.py
software/optimization/: behaviorGeneration.py
software/parkour/: objectPlacer.py  parkourStorage.py  viconCollector.py  viconParkour.py
software/plant/: parameter.py
software/spine/: __init__.py  mjbots.py  pybullet.py
software/stateEstimation/: contact.py  contactSimulation.py  encoder.py  encoderSimulation.py  tracker.py
software/stateMachine/: behaviorStabilization.py
software/util/: build.py  prepare.py  read.py  save.py  suppress.py
(+52 files in other folders)
